--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,36 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Two
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            My Orders
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+    <ion-list>
+        <ion-item *ngFor="let item of myItems">
+            <ion-thumbnail slot="start">
+                <img src="{{item.picture}}">
+            </ion-thumbnail>
+            <ion-label>
+                <h2>{{item.title}}</h2>
+                <h3>{{item.price*item.quantity | currency}}</h3>
+                <p *ngIf="item.extraInfo">{{item.extraInfo}}</p>
+                <div>
+                    <ion-row>
+                        <ion-col>
+                            <ion-button>OK</ion-button>
+                        </ion-col>
+                        <ion-col>
+                            <ion-button (click)="dismissItem(item)">Cancel</ion-button>
+                        </ion-col>
+                    </ion-row>
+                </div>
+            </ion-label>
+            <h3 slot="end">
+                x{{item.quantity}}
+            </h3>
+
+        </ion-item>
+    </ion-list>
+</ion-content>
