--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,14 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.swiper-pagination{
+  position: fixed;
+  bottom: 20px;
+
+  .swiper-pagination-bullet{
+    height: 20px;
+    width: 20px;
+    opacity: 0.9;
+  }
+}
