--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,7 +9,7 @@
 <ion-content>
     <!-- List of Text Items -->
     <ion-list>
-        <ion-item *ngFor="let item of items" (click)="showOptions()">
+        <ion-item *ngFor="let item of items" (click)="showOptions(item)">
             <ion-thumbnail slot="start">
                 <img src="{{item.picture}}">
             </ion-thumbnail>
