--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -8,29 +8,38 @@
 
 <ion-content>
     <ion-list>
-        <ion-item *ngFor="let item of myItems">
-            <ion-thumbnail slot="start">
-                <img src="{{item.picture}}">
-            </ion-thumbnail>
-            <ion-label>
-                <h2>{{item.title}}</h2>
-                <h3>{{item.price*item.quantity | currency}}</h3>
-                <p *ngIf="item.extraInfo">{{item.extraInfo}}</p>
-                <div>
-                    <ion-row>
-                        <ion-col>
-                            <ion-button>OK</ion-button>
-                        </ion-col>
-                        <ion-col>
-                            <ion-button (click)="dismissItem(item)">Cancel</ion-button>
-                        </ion-col>
-                    </ion-row>
-                </div>
-            </ion-label>
-            <h3 slot="end">
-                x{{item.quantity}}
-            </h3>
 
-        </ion-item>
+        <ion-card *ngIf="!myItems || myItems.length == 0">
+            <ion-card-content text-center>
+                You dont have any orders yet!
+            </ion-card-content>
+        </ion-card>
+
+        <div *ngFor="let item of myItems">
+            <ion-item>
+                <ion-thumbnail slot="start">
+                    <img src="{{item.picture}}">
+                </ion-thumbnail>
+                <ion-label>
+                    <h2>{{item.title}}</h2>
+                    <h3>{{item.price*item.quantity | currency}}</h3>
+                    <p *ngIf="item.extraInfo">{{item.extraInfo}}</p>
+                </ion-label>
+                <ion-badge *ngIf="item.quantity > 1" slot="end">
+                    x{{item.quantity}}
+                </ion-badge>
+            </ion-item>
+            <div text-center style="border-bottom: 1px solid #ccc">
+                <ion-row>
+                    <ion-col>
+                        <ion-button>Send Payment</ion-button>
+                    </ion-col>
+                    <ion-col>
+                        <ion-button color="danger" (click)="dismissItem(item)">Cancel</ion-button>
+                    </ion-col>
+                </ion-row>
+            </div>
+        </div>
+
     </ion-list>
 </ion-content>
