--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,9 +1,40 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Three
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            My Profile
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content class="ion-padding">
+
+    <ion-item>
+        <ion-card-title>
+            <span *ngIf="!addressInfo">No</span>
+            Stored Address
+        </ion-card-title>
+    </ion-item>
+    <div *ngIf="!addressInfo">
+        <ion-button size="full" (click)="openAddressModal()">Add it here</ion-button>
+    </div>
+    <ion-item *ngIf="addressInfo">
+        <ion-label>
+            <h2>{{addressInfo.address}}</h2>
+            <h3>{{addressInfo.city}}, {{addressInfo.zip}}</h3>
+        </ion-label>
+        <ion-icon slot="end" color="primary" name="create" (click)="openAddressModal()"></ion-icon>
+    </ion-item>
+    <ion-item>
+        <ion-card-title>
+            <span *ngIf="!ccInfo">No</span>
+            Stored CC Info
+        </ion-card-title>
+    </ion-item>
+    <div *ngIf="!ccInfo">
+        <ion-button size="full" (click)="openCreditCardModal()">Add it here</ion-button>
+    </div>
+    <div *ngIf="ccInfo">
+        **** **** **** ****
+    </div>
+
+</ion-content>
