Added facebook login, fixed status bar and backbutton on android

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -8,6 +8,8 @@
 
 <ion-content class="ion-padding">
 
+    <ion-button size="full" (click)="logInWithFacebook()">Log in with Facebook</ion-button>
+
     <ion-item>
         <ion-card-title>
             <span *ngIf="!addressInfo">No</span>
