Added fingerprint plugin. Added Icon and Spalsh

--- a/src/app/modals/credit-card/credit-card.page.html
+++ b/src/app/modals/credit-card/credit-card.page.html
@@ -7,6 +7,11 @@
 
 <ion-content>
 
+    <ion-fab *ngIf="showEdit" (click)="showCcInfo()" vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button>
+            <ion-icon name="finger-print"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 
     <ion-item>
         <ion-label position="stacked">Credit Card Info</ion-label>
